Fixed gaps between elements on monitors with fractional scaling

--- a/config/swaync/style.css
+++ b/config/swaync/style.css
@@ -114,6 +114,7 @@
 .widget {
     margin: 0;
     padding: 0;
+    border-bottom: var(--border);
 }
 
 
